feat: add PaymentService unit tests - Add createPayment tests (valid, full payment, invalid amount) - Add payment status update tests - Add client total depense update test - 8 tests with complete coverage